# swarm

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
assets/: tmux.conf
hooks/: done.md  interview.md  log.md  poll-pr.md  qa-swarm.md  workspace.md  worktree.md
src/: config.rs  detection.rs  main.rs  model.rs  tmux.rs
src/inbox/: mod.rs  storage.rs
src/inbox/sources/: imessage.rs  mod.rs
