[package]
name = "swarm"
version = "0.1.8"
edition = "2021"
description = "Terminal dashboard for managing multiple AI coding agents in parallel"
license = "MIT"
repository = "https://github.com/whopio/swarm"
keywords = ["tui", "ai", "agents", "claude", "tmux"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
ratatui = { version = "0.27.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.27.0"
thiserror = "1.0.65"
toml = "0.8.19"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
slug = "0.1.6"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
self-replace = "1.3"
semver = "1.0"
